# fastapi_postale-response

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/test/: test_main.py
