[tool.poetry]
name = "fastapi-postale-response"
version = "0.1.0"
description = "WIP"
authors = ["imaima"]
readme = "README.md"
packages = [{include = "fastapi_postale_response"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
