[tool.poetry]
name = "fastapi-postale-response"
version = "0.1.0"
description = ""
authors = ["imaima"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
pytest = "^7.3.1"
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
